spec/testdata/rust_snapshots/term__unicode_spans__rich_no_color.golden
error[E01]: cow may not jump during new moon.
  ┌─ moon_jump.rs:1:1
  │
1 │ 🐄🌑🐄🌒🐄🌓🐄🌔🐄🌕🐄🌖🐄🌗🐄🌘🐄
  │ ^^ Invalid jump

note: invalid unicode range
  ┌─ moon_jump.rs:1:1
  │
1 │ 🐄🌑🐄🌒🐄🌓🐄🌔🐄🌕🐄🌖🐄🌗🐄🌘🐄
  │ -- Cow range does not start at boundary.

note: invalid unicode range
  ┌─ moon_jump.rs:1:3
  │
1 │ 🐄🌑🐄🌒🐄🌓🐄🌔🐄🌕🐄🌖🐄🌗🐄🌘🐄
  │     -- Cow range does not end at boundary.

note: invalid unicode range
  ┌─ moon_jump.rs:1:1
  │
1 │ 🐄🌑🐄🌒🐄🌓🐄🌔🐄🌕🐄🌖🐄🌗🐄🌘🐄
  │ ------ Cow does not start or end at boundary.

